erDiagram
    USERS ||--|| USER_PREFERENCES : has
    USERS ||--|| USER_FINANCIAL_PROFILES : has
    USERS ||--o{ AUTH_VERIFICATION_CODES : verifies
    USERS ||--o{ USER_SESSIONS : authenticates
    USERS ||--o{ NOTIFICATION_SETTINGS : configures
    USERS ||--o{ FINANCIAL_GOALS : sets
    USERS ||--o{ CATEGORIES : owns
    USERS ||--o{ TAGS : owns
    USERS ||--o{ EVENTS : owns
    USERS ||--o{ TRANSACTIONS : owns
    USERS ||--o{ BUDGETS : owns
    USERS ||--o{ SPENDING_SUMMARIES : caches
    USERS ||--o{ AI_INPUTS : submits
    USERS ||--o{ AI_INSIGHTS : receives
    USERS ||--o{ CONTEXT_SNAPSHOTS : owns
    USERS ||--o{ USER_HABIT_SIGNALS : learns
    USERS ||--o{ AI_CONTEXT_PACKAGES : sends
    USERS ||--o{ AI_RECOMMENDATION_FEEDBACK : responds

    CATEGORIES ||--o{ CATEGORIES : parent
    CATEGORIES ||--o{ TRANSACTIONS : classifies
    CATEGORIES ||--o{ BUDGETS : limits

    TAGS ||--o{ EVENT_TAGS : applies_to
    TAGS ||--o{ TRANSACTION_TAGS : applies_to

    EVENTS ||--o{ EVENT_REMINDERS : has
    EVENTS ||--o{ EVENT_TAGS : tagged_by
    EVENTS ||--o{ TRANSACTIONS : relates_to
    EVENTS ||--o{ CONTEXT_SNAPSHOTS : described_by

    TRANSACTIONS ||--o{ TRANSACTION_TAGS : tagged_by
    TRANSACTIONS ||--o{ CONTEXT_SNAPSHOTS : described_by

    AI_INPUTS ||--o{ AI_EXTRACTIONS : produces
    AI_INPUTS ||--o{ EVENTS : creates
    AI_INPUTS ||--o{ TRANSACTIONS : creates
    AI_INPUTS ||--o{ AI_CONTEXT_PACKAGES : packaged_for
    AI_INSIGHTS ||--o{ AI_RECOMMENDATION_FEEDBACK : receives

    USERS {
        uuid id PK
        varchar username
        varchar phone UK
        citext email UK
        text avatar_url
        timestamptz last_login_at
        timestamptz created_at
        timestamptz updated_at
    }

    AUTH_VERIFICATION_CODES {
        uuid id PK
        uuid user_id FK
        varchar phone
        enum purpose
        enum channel
        text code_hash
        inet request_ip
        varchar device_id
        timestamptz expires_at
        timestamptz consumed_at
        smallint attempt_count
        enum status
        timestamptz created_at
    }

    USER_SESSIONS {
        uuid id PK
        uuid user_id FK
        text session_token_hash
        varchar device_id
        varchar device_name
        varchar client_platform
        varchar app_version
        inet login_ip
        timestamptz last_seen_at
        timestamptz expires_at
        timestamptz revoked_at
        timestamptz created_at
    }

    USER_PREFERENCES {
        uuid user_id PK,FK
        varchar currency
        varchar timezone
        enum default_view
        jsonb reminder_setting
        timestamptz created_at
        timestamptz updated_at
    }

    USER_FINANCIAL_PROFILES {
        uuid user_id PK,FK
        varchar currency
        numeric initial_balance
        numeric current_balance
        timestamptz created_at
        timestamptz updated_at
    }

    NOTIFICATION_SETTINGS {
        uuid id PK
        uuid user_id FK
        enum channel
        time quiet_start
        time quiet_end
        boolean enabled
        timestamptz created_at
        timestamptz updated_at
    }

    FINANCIAL_GOALS {
        uuid id PK
        uuid user_id FK
        varchar name
        numeric target_amount
        numeric current_amount
        date start_date
        date end_date
        enum status
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    CATEGORIES {
        uuid id PK
        uuid user_id FK
        varchar name
        enum type
        uuid parent_id FK
        varchar icon
        varchar color
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    TAGS {
        uuid id PK
        uuid user_id FK
        varchar name
        varchar color
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    EVENTS {
        uuid id PK
        uuid user_id FK
        varchar title
        text description
        boolean all_day
        date start_date
        date end_date
        timestamptz start_at
        timestamptz end_at
        varchar timezone
        varchar location
        enum event_type
        enum priority
        enum status
        varchar color
        boolean is_recurring
        jsonb recurrence_rule
        uuid source_input_id FK
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    EVENT_REMINDERS {
        uuid id PK
        uuid user_id FK
        uuid event_id FK
        timestamptz remind_at
        enum method
        boolean is_sent
        timestamptz created_at
    }

    EVENT_TAGS {
        uuid user_id FK
        uuid event_id PK,FK
        uuid tag_id PK,FK
        timestamptz created_at
    }

    TRANSACTIONS {
        uuid id PK
        uuid user_id FK
        uuid event_id FK
        uuid category_id FK
        enum type
        numeric amount
        varchar currency
        text description
        timestamptz occurred_at
        varchar payment_method
        varchar location
        boolean is_manual
        uuid source_input_id FK
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    TRANSACTION_TAGS {
        uuid user_id FK
        uuid transaction_id PK,FK
        uuid tag_id PK,FK
        timestamptz created_at
    }

    BUDGETS {
        uuid id PK
        uuid user_id FK
        uuid category_id FK
        enum period
        date start_date
        date end_date
        numeric limit_amount
        numeric alert_threshold
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    SPENDING_SUMMARIES {
        uuid id PK
        uuid user_id FK
        enum period_type
        date period_start
        date period_end
        numeric total_income
        numeric total_expense
        numeric balance
        jsonb category_breakdown
        timestamptz created_at
        timestamptz updated_at
    }

    AI_INPUTS {
        uuid id PK
        uuid user_id FK
        enum input_type
        text content
        text raw_text
        text image_url
        jsonb recognized_json
        timestamptz created_at
    }

    AI_EXTRACTIONS {
        uuid id PK
        uuid input_id FK
        enum entity_type
        jsonb parsed_data
        numeric confidence
        timestamptz created_at
    }

    AI_INSIGHTS {
        uuid id PK
        uuid user_id FK
        enum insight_type
        varchar title
        text content
        jsonb related_data
        boolean is_read
        timestamptz created_at
        timestamptz deleted_at
    }

    CONTEXT_SNAPSHOTS {
        uuid id PK
        uuid user_id FK
        enum source_type
        uuid event_id FK
        uuid transaction_id FK
        uuid input_id FK
        timestamptz occurred_at
        date date_local
        varchar timezone
        smallint day_of_week
        boolean is_weekend
        enum time_bucket
        enum weather_condition
        enum temperature_bucket
        varchar location_text
        varchar location_scene
        varchar activity_scene
        varchar mood
        jsonb features
        timestamptz created_at
    }

    USER_HABIT_SIGNALS {
        uuid id PK
        uuid user_id FK
        enum signal_type
        enum subject_type
        varchar subject_value
        jsonb context_filter
        integer evidence_count
        numeric confidence
        timestamptz first_observed_at
        timestamptz last_observed_at
        jsonb example_refs
        enum status
        timestamptz created_at
        timestamptz updated_at
    }

    AI_CONTEXT_PACKAGES {
        uuid id PK
        uuid user_id FK
        uuid input_id FK
        enum package_type
        jsonb context_keys
        jsonb payload_summary
        integer token_estimate
        enum privacy_level
        timestamptz created_at
    }

    AI_RECOMMENDATION_FEEDBACK {
        uuid id PK
        uuid user_id FK
        uuid insight_id FK
        enum feedback_type
        text feedback_text
        timestamptz created_at
    }
